# Iyokan-L2

./: .clang-format  .gitignore  CMakeLists.txt  ExUnitTest.json  ExecManager.hpp  ExecWorker.hpp  LICENSE  Logic.hpp  LogicCellAND.hpp  LogicCellANDNOT.hpp  LogicCellDFFP.hpp  LogicCellMUX.hpp  LogicCellNAND.hpp  LogicCellNOR.hpp  LogicCellNOT.hpp  LogicCellOR.hpp  LogicCellORNOT.hpp  LogicCellRAM.hpp  LogicCellROM.hpp  LogicCellXNOR.hpp  LogicCellXOR.hpp  LogicPort.hpp  LogicPortIn.hpp  LogicPortOut.hpp  Makefile  NetList.hpp  README.md  install.sh  main.cpp  perf-test.sh  test.json
cufhe/: CMakeLists.txt
cufhe/src/: CMakeLists.txt  ExecManager.cpp  ExecManager.cu  LogicCellAND.cpp  LogicCellAND.cu  LogicCellANDNOT.cpp  LogicCellANDNOT.cu  LogicCellDFFP.cpp  LogicCellMUX.cpp  LogicCellNAND.cpp  LogicCellNAND.cu  LogicCellNOR.cpp  LogicCellNOR.cu  LogicCellNOT.cpp  LogicCellNOT.cu  LogicCellOR.cpp  LogicCellOR.cu  LogicCellORNOT.cpp  LogicCellORNOT.cu  LogicCellRAM.cpp  LogicCellROM.cpp  LogicCellXNOR.cpp  LogicCellXNOR.cu  LogicCellXOR.cpp  LogicCellXOR.cu  LogicPortIn.cpp  LogicPortIn.cu  LogicPortOut.cpp  LogicPortOut.cu  NetList.cpp  Utils.cpp  main.cpp
include/: BinaryLoader.hpp  Config.hpp  ExecManager.hpp  KVSPPacket.hpp  Logic.hpp  LogicCellAND.hpp  LogicCellANDNOT.hpp  LogicCellDFFP.hpp  LogicCellMUX.hpp  LogicCellNAND.hpp  LogicCellNOR.hpp  LogicCellNOT.hpp  LogicCellOR.hpp  LogicCellORNOT.hpp  LogicCellRAM.hpp  LogicCellROM.hpp  LogicCellXNOR.hpp  LogicCellXOR.hpp  LogicPortIn.hpp  LogicPortOut.hpp  NetList.hpp  Utils.hpp
src/: BinaryLoader.cpp  CMakeLists.txt  ExecManager.cpp  KVSPPacket.cpp  LogicCellAND.cpp  LogicCellANDNOT.cpp  LogicCellDFFP.cpp  LogicCellMUX.cpp  LogicCellNAND.cpp  LogicCellNOR.cpp  (+12 more)
tfhe/src/: CMakeLists.txt  ExecManager.cpp  KVSPPacket.cpp  LogicCellAND.cpp  LogicCellANDNOT.cpp  LogicCellMUX.cpp  LogicCellNAND.cpp  LogicPortIn.cpp  LogicPortOut.cpp  NetList.cpp  main.cpp
(+27 files in other folders)
