cmake_minimum_required(VERSION 3.10)
find_package(CUDA REQUIRED)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../picojson)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(/usr/local/include/cufhe)
include_directories(/opt/cuda/include)
include_directories(/usr/local/cuda/include)
link_directories(/usr/local/lib)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} source)
add_executable(iyokanl2-cufhe ${source})
target_link_libraries(iyokanl2-cufhe cufhe_gpu ${CUDA_LIBRARIES} tfhe-spqlios-avx)
